# backstory-ai

./: .env.example  .gitignore  .npmrc  FEATURES.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  Dockerfile.worker  fly.toml  fly.worker.toml  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_sprint0_core.py  002_sprint1_sources.py  003_sprint1_content.py  004_chunk_embeddings.py  005_chunk_fts.py  006_embedding_384_local.py  007_sprint2_ask.py  008_sprint3_interviews.py  009_source_engagement_cascade.py
apps/api/app/: __init__.py  auth.py  config.py  db.py  db_sync.py  main.py  models.py  worker.py
apps/api/app/eval/: __main__.py  runner.py
apps/api/app/routers/: ask.py  briefs.py  engagements.py  interviews.py  library.py  sources.py  sse.py
apps/api/app/services/: archaeology_brief.py  archaeology_signals.py  chunk_embed.py  code_linking.py  doc_ingest.py  embeddings.py  engagements.py  git_ingest.py  hybrid_retrieval.py  ingest_common.py  interview_storage.py  (+16 more)
apps/api/scripts/: DEMO_RUNBOOK.md  seed_demo.py  start-api.sh  verify_demo_walkthrough.py
apps/api/tests/: conftest.py  test_archaeology_brief.py  test_archaeology_signals.py  test_code_linking.py  test_config.py  test_demo_path.py  test_doc_ticket_ingest.py  test_embeddings.py  test_engagements_api.py  test_eval_gate.py  test_git_ingest.py  test_interview_retrieval.py  test_interviews_api.py  test_keyword_search.py  test_library_api.py  test_llm.py  test_rag.py  test_sources.py  test_tenant_isolation.py
(+135 files in other folders)
