[project]
name = "backstory-api"
version = "0.1.0"
description = "Backstory-AI FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.10.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "pgvector>=0.3.6",
    "fastembed>=0.6.0",
    "langfuse>=2.60.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
